bk_ida/gccida/g1/force_nonfallthru_and_redirect
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1392:4: error: expected ';' after expression
rtx v15; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1392:5: error: use of undeclared identifier 'v15'
rtx v15; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1396:5: error: expected ';' after expression
edge succ; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1396:6: error: use of undeclared identifier 'succ'
edge succ; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1397:5: error: expected ';' after expression
edge v21; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1397:6: error: use of undeclared identifier 'v21'
edge v21; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1415:1: error: use of undeclared identifier 'succ'
succ = entry_exit_blocks[0].succ; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1428:1: error: use of undeclared identifier 'v21'
v21 = succ; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1428:7: error: use of undeclared identifier 'succ'
v21 = succ; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1429:1: error: use of undeclared identifier 'succ'
succ = succ->succ_next; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1429:8: error: use of undeclared identifier 'succ'
succ = succ->succ_next; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1430:7: error: use of undeclared identifier 'succ'
if ( !succ ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1432:11: error: use of undeclared identifier 'succ'
if ( e == succ ) 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1434:16: error: use of undeclared identifier 'v21'
p_succ_next = &v21->succ_next; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1469:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v23.rtwint = ( __int64)rtx[1].fld[0]; 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1528:1: error: use of undeclared identifier 'v15'
v15 = block_label( target); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1530:17: error: use of undeclared identifier 'v15'
v17 = gen_jump( v15); 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1532:28: error: use of undeclared identifier 'v15'
*( _QWORD *)&src->end[4] = v15; 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/cfgrtl.c:1533:16: error: use of undeclared identifier 'v15'
++*( _DWORD *)&v15[2]; 
               ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_nonfallthru_and_redirect/src/obj/cfgrtl.o] Error 1
